# fullstack-next-fastapi-starter

./: .gitignore  Quickstart.md  README.md  check-deployment.sh  deploy-check.sh  deploy-local.sh  docker-compose.prod.yaml  docker-compose.yaml  env.example
backend/: .gitignore  Dockerfile  Makefile  env.example  pyproject.toml
backend/src/hello_api/: __init__.py
backend/src/hello_api/application/: __init__.py  hello_service.py
backend/src/hello_api/domain/: __init__.py  models.py
backend/src/hello_api/infrastructure/: __init__.py
backend/src/hello_api/infrastructure/api/: __init__.py  main.py
backend/tests/: conftest.py  test_api.py
docs/: DOCUMENTATION_REORGANIZATION.md  README.md
docs/deployment/: CHANGES.md  GUIDE.md  INDEX.md  QUICK.md  README.md  START_HERE.md  SUMMARY.md  digitalocean.md  flyio.md  local.md  railway.md  render.md  vercel.md
frontend/: .gitignore  Dockerfile  env.local.example  env.production.example  next.config.ts  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
